# LiDAR-sim

./: .gitman.yml  CMakeLists.txt  README.md  requirements.txt  setup-emscripten.sh  shell.html
.github/workflows/: cmake.yml
data/shader/glsl/410/: basic_color.fs  basic_color.vs  depth_only.fs  depth_only.vs  pointcloud.vs
data/shader/glsl/460/: basic_color.fs  basic_color.vs  depth_only.fs  depth_only.vs
include/: state.hpp
include/lidar/: sim.hpp
src/: main.cpp
src/lidar/: sim.cpp
